2007-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-temp-file): New parameter FILENAME.  Append
	its extension to the resulting temporary file name.
	(tramp-handle-file-local-copy, tramp-handle-write-region): Apply
	it.

	* tramp-smb.el (tramp-smb-handle-file-local-copy)
	(tramp-smb-handle-write-region): Apply it.

2007-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command, tramp-get-file-exists-command)
	(tramp-get-remote-ln): Handle error case.  Reported by Chris Moore
	<dooglus@gmail.com>.

2007-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
	default-directory to a sane value when calling start-process.

2007-01-21  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights.

2007-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-parsed-tramp-file-name): Protect debug spec
	during compilation.

2007-01-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-local-copy): Set
	`enable-multibyte-characters' to nil.  Reported by Chris Moore
	<christopher.ian.moore@gmail.com>.

2007-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: (tramp-process-one-action): Remove `with-timeout'.
	(tramp-process-actions): Add optional parameter TIMEOUT.
	(tramp-open-connection-telnet, tramp-open-connection-rsh)
	(tramp-open-connection-su): Add timeout of 60".

2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `natnump' instead of
	`wholenump' because of XEmacs.

2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.55 repackaged.

2006-12-31  Romain Francoise <romain@orebokech.com>

	* tramp.el (tramp-default-method):  Don't use `symbol-function'.

2006-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.55 released.

2006-12-21  Michael Albinus  <michael.albinus@gmx.de>
